# sigkill.dk

./: .gitignore  blog.md  deploy.sh  id_rsa.pub  index.md  links.md  me.md  pubkey.asc  robots.txt  shell.nix  sigkill.cabal  sigkill.lhs  stack.yaml
blog/: 2016-10-17-first-post.md  2016-10-18-fhpc-trip-report.md  2017-02-06-fosdem.md  2017-02-15-lambda-days.md  2017-08-06-borderlands-2-on-fedora.md  2017-09-04-icfp-day-one.md  2017-09-05-icfp-day-two.md  2017-09-06-icfp-day-three.md  2018-06-13-tfp-trip-report.md  2018-07-17-homebrew-is-the-best-thing-about-macos.md  2018-08-22-bornhack.md  2019-06-30-how-to-make-sway-act-like-ratpoison.md  2019-06-30-making-sway-act-line-ratpoison.md  2019-10-17-haskell-build-systems-for-non-haskellers.md  2020-02-09-why-i-run-openbsd.md  2020-06-19-nix-haskell-cabal-ci-problem.md  2020-12-21-vmcai-artifact-evaluation.md  2021-05-06-another-haskell-and-nix-setup.md  2021-07-03-mosml-on-dos.md
config/: index.md
css/: default.css  syntax.css
hacks/: index.md
hacks/patches/: gsmenu-for-xmonad.md  index.md
me/: config.md  index.md  wms.md
programs/: cubic.fut  cubic.md  stepping.lhs
projects/: climacs.md  futhark.md  index.md
projects/gsmenu/: index.md
projects/insitu/: index.md
projects/sindre/: index.md
projects/twelfppr/: index.md
templates/: default.html  hack.html  post.html  posts.html
writings/: braces.md  flights.md  fountain_pens.md  index.md  languages.md  primes.md  scripting.md  semicolons.md
writings/guides/: gateway.md  gateway.sh  hakyll.lhs  index.md  mime.md  nixos_pass.md  plan_9_tools.md
writings/par/: index.md  lhomo.md
