name:                sigkill
version:             1.0
synopsis:            The sigkill.dk website
description:         Please see README.md
homepage:            http://sigkill.dk
author:              Troels Henriksen
maintainer:          athas@sigkill.dk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sigkill
  main-is:             sigkill.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       filepath,
                       pandoc,
                       pandoc-types,
                       blaze-html,
                       blaze-markup,
                       hakyll
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Athas/sigkill.dk
